@@ -1,3 +1,7 @@
+2008-11-10  Benjamin Mack <benni@typo3.org>
+
+	* Fixed #9702: New Folder module lacks docheaders (Patch by Dan Osipov)
+
 2008-10-12  Dan Osipov <dosipov@phillyburbs.com>
 
 	* Fixed bugs #9550: DAM>FILE submodules have double refresh and fileadmin
